# endogenous-steering-resistance

./: .gitignore  CHANGES.md  CITATION.bib  CONTENTS_SUMMARY.txt  INDEX.md  LICENSE  MANIFEST.md  PAPER_MAPPING.md  QUICKSTART.md  README.md  README_EXPERIMENTS.md  STRUCTURE.md  claude_judge.py  concreteness_filtering.py  download_gemma_labels.py  experiment_1_esr.py  experiment_2_multi_boost.py  experiment_5_prompt_variants.py  experiment_8_no_steering_baseline.py  experiment_config.py  experiment_dataclasses.py  gemma_models_and_saes.py  install.sh  judge.py  load_labels.py  paper_numbers.md  python_for_gemma.sh  regrade_cross_judge.py  rejudge_results.py  relevance_filtering.py  requirements.txt  result_file_utils.py  sample_features.py  threshold_finder.py  utils.py  vllm_engine.py
data/: normal_responses.json  off_topic_detectors_separability.json  off_topic_detectors_v2.json
experiment_01_esr/: __init__.py  __main__.py
experiment_02_multi_boost/: __init__.py  __main__.py
experiment_04_finetuning/: config_masked_ratio_10pct.yml  config_masked_ratio_40pct.yml  config_masked_ratio_50pct.yml  config_masked_ratio_80pct.yml  config_masked_ratio_90pct.yml  dataset_masked_ratio_20pct_train.jsonl  dataset_masked_ratio_40pct_train.jsonl  dataset_masked_ratio_50pct_train.jsonl  dataset_masked_ratio_80pct_train.jsonl  dataset_normal_responses.json  generate_prompted_self_correction_data.py  instruct-lora-8b-with-masking.yaml  merge.sh  merge_lora_adapter.py  pyproject.toml  run_esr.sh  setup_masked_ratio_sweep.py  train.sh
experiment_05_prompt_variants/: __init__.py  (+1 more)
(+84 files in other folders)
